
  HCAT-368 Documentation improvements: doc set & API docs (lefty via gates)

  HCAT-387 Trunk should point to 0.10 snapshot to match hive trunk (toffer)

  HCAT-329 HCatalog build fails with pig 0.9 (traviscrawford via hashutosh)

  HCAT-233 gitignore file (enis via gates)

  OPTIMIZATIONS

  BUG FIXES
  HCAT-471 Test HCat_ShowDes_1[1-3] fails (vikram.dixit via gates)

  HCAT-451 Partitions are created even when Jobs are aborted (avandana)

  HCAT-436 JSON SerDe column misnaming on CTAS (khorgath via gates)

  HCAT-449 HCatLoader is mistakenly identifying Configuration parameters to store (cdrome via traviscrawford)

  HCAT-452 HCat_Drop_Table_3 does not get initialized properly (cdrome via toffer)  

  HCAT-448 HCatStorer performance is 4x slower in HCat 0.4 than HCat 0.2 (rajesh.balamohan via khorgath)

  HCAT-437 HCatSchema's equals() implementation uses hashcode obtained from toString() method. (avandana)

  HCAT-438 HCatFieldSchema class does not have equals() method implementation (avandana)

  HCAT_416 MultiOutputFormat should handle merging of DistributedCache configurations (rohini via avandana)

  HCAT-423 HCatalog should include SerDe-reported fields in the table schema (traviscrawford via khorgath)

  HCAT-362 add --local-infile to the mysql command (arpitgupta via daijy)

  HCAT-417 List Ant 1.8 in install pre-reqs (jghoman via daijy)

  HCAT-422 missing guava lib in trunk build causes unit test failures

  HCAT-406 The "toString" method in HCatFieldSchema class return only type information. (avandana)

  HCAT-421 Unit test failures in trunk build (avandana)

  HCAT-411 Incorrect example provided in the HCatalog documentation (Overview page) avandana

  HCAT-355 Include 1.1.0 version of hadoop as test dependency to fix random test failures in build (rohini via avandana)

  HCAT-409 MultiOutputformat should make getJobContext public (rohini via avandana)
